# Robotic-Arm-System-ID-

./: .gitignore  INSTRUCTIONS_FOR_UPSTREAM_PR.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PRE_PUBLISH_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  README_UPSTREAM_PR.md  READY_TO_PUBLISH.md  REPOSITORY_NOTES.md  REPO_SETUP.md  REPURPOSE_REPO.md  SIMPLE_STEPS.md  TASK_COMPLETION_SUMMARY.md  UPSTREAM_PR.md  commit_to_github.sh  pyproject.toml
Python/: 7DOF_Arm.xml  Link2.STL  Link3.STL  Link5.STL  Link6.STL  MUJOCO_LOG.TXT  damiao.py  dev_sn.py  dm_motor_4340.py  ik.py  reproduce_issue.py  simulation.py
Ragtime Arm/: 4DOF_Arm.xml  5DOF_Arm.xml  Link4.STL  Link7.STL  MUJOCO_LOG.TXT  README.md  dm_motor_4340.py  simulation.py  verify_joints.py
kinova/: MUJOCO_LOG.TXT  calc_truth.py  camera_viewer.py  check_ground_truth.py  create_overlay_video.py  debug_regressor.py  demo_sysid_comparison.py  generateRegressor.py  ik_solver.py  joint_viewer.py  motor.py  mujoco_renderer.py  play_test_trajectory.py  plot_system_id.py  sysid_validation_results.csv  system_id.py  test_fix.py  test_mujoco.py  test_pinocchio.py  test_system_id.py  validate_sysid_pipeline.py  verify_inertia_equivalence.py  view_excitation.py
kinova/.kiro/steering/: environment.md
kinova/model/: kinova.xml  kinova_fullinertia.xml  kinova_fullinertia_guess.xml
kinova/model/meshes/: link1.STL  link3.STL  link4.STL  link5.STL  link7.STL  (+1 more)
kinova/urdf/: kinova.urdf
robot_sysid/: __init__.py  cli.py  export.py  parser.py  regressor.py  simulator.py  solver.py  trajectory.py
tests/: test_solver.py  test_solver_integration.py  test_trajectory.py
(+6 files in other folders)
